-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 10.0.1
-
-
07374a711 (11.0)
If values of indent within switch are checked and applied and dialog is closed chosen value is not stored. When this dialog is opened again, it shows old value.
Attached screen recording shows it.
| For Gerrit Dashboard: QTCREATORBUG-29190 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 482071,3 | ClangFormat: Do not change incompatible settings | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |