ClangFormat: Do not change incompatible settings

Fixes: QTCREATORBUG-29190
Change-Id: I81730f59f05c8aba718a60deebfeb2b1b3aa0d7f
Reviewed-by: Artem Sokolovskii <artem.sokolovskii@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>